// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessRegistrationsTable should handle resign dropdown action 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Entity table
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Entity name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    History
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Website
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Repository
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Options
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr egluiO"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 1
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-light font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr…YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold"
                >
                  <span>
                    business2reg
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow justify-center text-theme-neutral-light"
                >
                  <div
                    class="sc-AxirZ iQaTP text-center"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr ftZuYa justify-end"
                >
                  <button
                    class="sc-AxhCb biicxn ml-16"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BusinessRegistrationsTable should handle resign dropdown action 2`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Entity table
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Entity name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    History
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Website
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Repository
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Options
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr egluiO"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 1
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-light font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr…YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold"
                >
                  <span>
                    business2reg
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow justify-center text-theme-neutral-light"
                >
                  <div
                    class="sc-AxirZ iQaTP text-center"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr ftZuYa justify-end"
                >
                  <button
                    class="sc-AxhCb biicxn ml-16"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BusinessRegistrationsTable should render empty state 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Entity table
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Entity name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    History
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Website
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Repository
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Options
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BusinessRegistrationsTable should render registrations 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
  >
    <div
      class="container py-16 mx-auto px-14"
    >
      <h2
        class="mb-8 font-bold"
      >
        Entity table
      </h2>
      <div
        class="sc-AxheI dbLFAn"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Entity name
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    History
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Website
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    MSQ
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--6"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div>
                    Repository
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--7"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top invisible"
                >
                  <div>
                    Options
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxmLO geUDDZ group"
              data-testid="TableRow"
            >
              <td
                class="w-24"
              >
                <div
                  class="sc-Axmtr egluiO"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-AxhUy dHClEW border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ mr-4"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                      data-testid="address__wallet-name"
                    >
                      ARK Wallet 1
                    </span>
                    <span
                      class="sc-fzoLsD fqEnxe text-theme-neutral-light font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr…YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold"
                >
                  <span>
                    business2reg
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow justify-center text-theme-neutral-light"
                >
                  <div
                    class="sc-AxirZ iQaTP text-center"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr hmHaow font-semibold justify-center text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-Axmtr ftZuYa justify-end"
                >
                  <button
                    class="sc-AxhCb biicxn ml-16"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
